@@ -198,6 +198,8 @@ OPTIMIZATIONS
 
 BUG FIXES
 
+PIG-1507: Full outer join fails while doing a filter on joined data (daijy)
+
 PIG-1493: Column Pruner throw exception "inconsistent pruning" (daijy)
 
 PIG-1490: Make Pig storers work with remote HDFS in secure mode (rding)
